--- a/.github/workflows/deploy_stage_env.yml
+++ b/.github/workflows/deploy_stage_env.yml
@@ -30,13 +30,16 @@ jobs:
         with:
           node-version: 18
 
-      # - name: Cache node modules
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ~/.npm
-      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Update lock file
+        run: npm install
 
       - name: Install dependencies
         run: npm ci
