--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@aws-sdk/client-ses": "^3.360.0",
     "@aws/amazon-location-utilities-auth-helper": "^1.0.1",
     "@formspark/use-formspark": "^0.1.39",
-    "@fusionworks/ra-s3-input": "^0.1.6",
     "@headlessui/react": "^1.7.3",
     "@playwright/test": "^1.35.0",
     "@react-email/components": "^0.0.7",
@@ -52,11 +51,11 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/qs": "^6.9.7",
-    "algoliasearch": "^4.14.2",
+    "algoliasearch": "^4.24.0",
     "amplitude-js": "^8.18.5",
     "apollo-link-error": "^1.1.13",
     "auth0": "^3.5.0",
-    "aws-sdk": "^2.1197.0",
+    "aws-sdk": "^2.1680.0",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
@@ -69,6 +68,7 @@
     "graphql-tag": "^2.12.6",
     "hash-sum": "^2.0.0",
     "html-react-parser": "^3.0.4",
+    "instantsearch.js": "^4.74.0",
     "ip-matching": "^2.1.2",
     "iso-3166-1": "^2.1.1",
     "jose": "^4.8.1",
@@ -98,7 +98,7 @@
     "react-hot-toast": "^2.4.0",
     "react-hotjar": "^5.0.0",
     "react-hotkeys-hook": "^3.4.7",
-    "react-instantsearch-hooks-web": "^6.31.1",
+    "react-instantsearch": "^7.13.0",
     "react-markdown": "^8.0.7",
     "react-microsoft-clarity": "^1.1.2",
     "react-popper": "^2.3.0",
@@ -116,7 +116,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.5.1",
     "@graphql-codegen/typescript-operations": "2.4.2",
@@ -154,12 +154,12 @@
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "hasura-cli": "^2.7.0",
+    "hasura-cli": "^2.36.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.2",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.1.4",
     "p-queue": "^7.2.0",
     "postcss": "^8.4.41",
     "prettier": "^2.8.8",
