--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     ]
   },
   "dependencies": {
-    "@algolia/autocomplete-core": "^1.12.2",
-    "@algolia/autocomplete-preset-algolia": "^1.12.2",
+    "@algolia/autocomplete-core": "^1.17.4",
+    "@algolia/autocomplete-preset-algolia": "^1.17.4",
     "@apollo/client": "^3.6.7",
     "@aws-sdk/client-location": "^3.379.1",
     "@aws-sdk/client-ses": "^3.360.0",
@@ -51,7 +51,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/qs": "^6.9.7",
-    "algoliasearch": "^4.14.2",
+    "algoliasearch": "^4.24.0",
     "amplitude-js": "^8.18.5",
     "apollo-link-error": "^1.1.13",
     "auth0": "^3.5.0",
@@ -68,6 +68,7 @@
     "graphql-tag": "^2.12.6",
     "hash-sum": "^2.0.0",
     "html-react-parser": "^3.0.4",
+    "instantsearch.js": "^4.74.0",
     "ip-matching": "^2.1.2",
     "iso-3166-1": "^2.1.1",
     "jose": "^4.8.1",
@@ -97,7 +98,7 @@
     "react-hot-toast": "^2.4.0",
     "react-hotjar": "^5.0.0",
     "react-hotkeys-hook": "^3.4.7",
-    "react-instantsearch-hooks-web": "^6.31.1",
+    "react-instantsearch": "^7.13.0",
     "react-markdown": "^8.0.7",
     "react-microsoft-clarity": "^1.1.2",
     "react-popper": "^2.3.0",
