--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "graphql-tag": "^2.12.6",
     "hash-sum": "^2.0.0",
     "html-react-parser": "^3.0.4",
+    "instantsearch.js": "^4.74.0",
     "ip-matching": "^2.1.2",
     "iso-3166-1": "^2.1.1",
     "jose": "^4.8.1",
@@ -97,7 +98,7 @@
     "react-hot-toast": "^2.4.0",
     "react-hotjar": "^5.0.0",
     "react-hotkeys-hook": "^3.4.7",
-    "react-instantsearch-hooks-web": "^6.31.1",
+    "react-instantsearch": "^7.13.0",
     "react-markdown": "^8.0.7",
     "react-microsoft-clarity": "^1.1.2",
     "react-popper": "^2.3.0",
