--- a/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
+++ b/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
@@ -29,6 +29,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
+      - name: Install packages
+        run: npm install
+
       - name: Install dependencies
         run: npm ci
 
