--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@aws-sdk/client-ses": "^3.360.0",
     "@aws/amazon-location-utilities-auth-helper": "^1.0.1",
     "@formspark/use-formspark": "^0.1.39",
-    "@fusionworks/ra-s3-input": "^0.1.6",
     "@headlessui/react": "^1.7.3",
     "@playwright/test": "^1.35.0",
     "@react-email/components": "^0.0.7",
@@ -69,6 +68,7 @@
     "graphql-tag": "^2.12.6",
     "hash-sum": "^2.0.0",
     "html-react-parser": "^3.0.4",
+    "instantsearch.js": "^4.74.0",
     "ip-matching": "^2.1.2",
     "iso-3166-1": "^2.1.1",
     "jose": "^4.8.1",
@@ -98,12 +98,11 @@
     "react-hot-toast": "^2.4.0",
     "react-hotjar": "^5.0.0",
     "react-hotkeys-hook": "^3.4.7",
-    "react-instantsearch-hooks-web": "^6.31.1",
+    "react-instantsearch": "^7.13.0",
     "react-markdown": "^8.0.7",
     "react-microsoft-clarity": "^1.1.2",
     "react-popper": "^2.3.0",
     "react-query": "^3.39.1",
-    "react-select": "^5.4.0",
     "react-table": "^7.8.0",
     "react-use-intercom": "^2.0.0",
     "redis": "^4.6.5",
