update domain variables

--- a/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
+++ b/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
@@ -7,7 +7,7 @@ on:
     inputs:
 
 env:
-  HASURA_ENDPOINT: https://graphql.edgein.dev
+  HASURA_ENDPOINT: https://graphql.edgeindev.com
   HASURA_ADMIN_SECRET: ${{ secrets.HASURA_ADMIN_SECRET }}
   PG_CONNECTION_STRING: ${{ secrets.PG_CONNECTION_STRING }}
 
