--- a/infra/hasura/config.yaml
+++ b/infra/hasura/config.yaml
@@ -4,4 +4,4 @@ admin_secret: devsecret
 metadata_directory: metadata
 actions:
   kind: synchronous
-  handler_webhook_baseurl: http://localhost:3000
+  handler_webhook_baseurl: https://staging.edgein.dev
