--- a/test-api/.env
+++ b/test-api/.env
@@ -1,4 +1,4 @@
-GRAPHQL_ENDPOINT='http://localhost:8080/v1/graphql'
+GRAPHQL_ENDPOINT='http://https://unique-crow-54.hasura.app80/v1/graphql'
 HASURA_ADMIN_SECRET='devsecret'
 PARTNER_API_KEY=133f75c9d595e6a8945da010022552fe
 SUBMIT_DATA_URL='http://localhost:3000/api/submit-data'
