--- a/unique-crow-54/config.yaml
+++ b/unique-crow-54/config.yaml
@@ -1,7 +1,6 @@
 version: 3
 endpoint: http://https://unique-crow-54.hasura.app80
-admin_secret: devsecret
 metadata_directory: metadata
 actions:
   kind: synchronous
-  handler_webhook_baseurl: https://staging.edgein.dev
+  handler_webhook_baseurl: http://localhost:3000
