--- a/.env
+++ b/.env
@@ -31,8 +31,8 @@ ALGOLIA_WRITE_APPLICATION_ID='TFBKEVTOJD'
 ALGOLIA_WRITE_API_KEY='7351547981c8bf9dca342cb24a8ecde3'
 
 #key permission with only read access
-NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='TFBKEVTOJD'
-NEXT_PUBLIC_ALGOLIA_API_KEY='7351547981c8bf9dca342cb24a8ecde3'
+NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='B577V9DWXL'
+NEXT_PUBLIC_ALGOLIA_API_KEY='843c16ff46e6a05408fb3b98344b5ab6'
 
 AWS_BUCKET='edgein-image-upload-rmdev'
 AWS_BUCKET_ACCESS_KEY_ID='AKIA5Z4FFHJ5ERI2ZAY6'
