--- a/infra/hasura/config.yaml
+++ b/infra/hasura/config.yaml
@@ -1,6 +1,6 @@
 version: 3
-endpoint: http://localhost:8080
-admin_secret: devsecret
+endpoint: http://https://unique-crow-54.hasura.app
+admin_secret: H2qMpIzxHTQYpxhhuVoOrDvMEW3coQFLE42kiShCEJ5sHATlv7Fk12NfQIoSCjid
 metadata_directory: metadata
 actions:
   kind: synchronous
