--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ NEXT_PUBLIC_AUTH0_CLIENT_ID='2sc8KbXV1SyNy68PL0RTy3iCWgur8TZS'
 NEXT_PUBLIC_AUTH0_REDIRECT_URL='https://staging.edgein.dev'
 
 #key permission with read and write access
-ALGOLIA_WRITE_APPLICATION_ID='TFBKEVTOJD'
-ALGOLIA_WRITE_API_KEY='7351547981c8bf9dca342cb24a8ecde3'
+ALGOLIA_WRITE_APPLICATION_ID='B577V9DWXL'
+ALGOLIA_WRITE_API_KEY='d6d07145d8fddfc2f1c91fdd8862b647'
 
 #key permission with only read access
 NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='B577V9DWXL'
