Wip Table Cleanup

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # Disables Login & Permissions
-ENCRYPTION_SECRET='you-should-create-your-own-secret-to-use-for-encryption'
+ENCRYPTION_SECRET='zfuIzxrblbNHX31YFfPNFco4xUWTqpGEWHxvbNFbfUo='
 
 REVALIDATION_SECRET_TOKEN='revalidation_secret'
 REVALIDATION_AUTH_TOKEN='revalidation_token'
@@ -27,12 +27,12 @@ NEXT_PUBLIC_AUTH0_CLIENT_ID='2sc8KbXV1SyNy68PL0RTy3iCWgur8TZS'
 NEXT_PUBLIC_AUTH0_REDIRECT_URL='https://staging.edgein.dev'
 
 #key permission with read and write access
-ALGOLIA_WRITE_APPLICATION_ID='TFBKEVTOJD'
-ALGOLIA_WRITE_API_KEY='7351547981c8bf9dca342cb24a8ecde3'
+ALGOLIA_WRITE_APPLICATION_ID='B577V9DWXL'
+ALGOLIA_WRITE_API_KEY='d6d07145d8fddfc2f1c91fdd8862b647'
 
 #key permission with only read access
-NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='TFBKEVTOJD'
-NEXT_PUBLIC_ALGOLIA_API_KEY='7351547981c8bf9dca342cb24a8ecde3'
+NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='B577V9DWXL'
+NEXT_PUBLIC_ALGOLIA_API_KEY='843c16ff46e6a05408fb3b98344b5ab6'
 
 AWS_BUCKET='edgein-image-upload-rmdev'
 AWS_BUCKET_ACCESS_KEY_ID='AKIA5Z4FFHJ5ERI2ZAY6'
