--- a/.env
+++ b/.env
@@ -84,3 +84,5 @@ NEXT_PUBLIC_AWS_LOCATION_SERVICE_API_KEY=v1.public.eyJqdGkiOiJmYTFkNWJiYy0wNjVhL
 NEXT_PUBLIC_AWS_LOCATION_SERVICE_PLACE_INDEX=EsriIndex
 
 NEXT_PUBLIC_CLOUDSPONGE_API_KEY="localhost-only"
+
+NEXT_PUBLIC_GOOGLE_ADS_CLIENT_ID="ca-pub-6786801511149230"
