--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@aws/amazon-location-utilities-auth-helper": "^1.0.1",
     "@formspark/use-formspark": "^0.1.39",
     "@headlessui/react": "^1.7.3",
+    "@hypelab/sdk-react": "^1.0.4",
     "@playwright/test": "^1.35.0",
     "@react-email/components": "^0.0.7",
     "@react-email/render": "^0.0.7",
