Updated UI components and design

--- a/.env
+++ b/.env
@@ -86,3 +86,6 @@ NEXT_PUBLIC_AWS_LOCATION_SERVICE_PLACE_INDEX=EsriIndex
 NEXT_PUBLIC_CLOUDSPONGE_API_KEY="localhost-only"
 
 NEXT_PUBLIC_GOOGLE_ADS_CLIENT_ID="ca-pub-6786801511149230"
+# Replace your-random-email@gmail.com and your-email-password with actual values.
+EMAIL_USER=your-random-email@gmail.com
+EMAIL_PASS=your-email-password
