--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ AUTH0_DOMAIN='edgein.us.auth0.com'
 AUTH0_CLIENT_SECRET='CgKbjcVn4UV9dBwqfKlWjNAns7sQqYmf-Sii69jz-QU53w6QnHM3U4K_SeTjXK-8'
 NEXT_PUBLIC_AUTH0_ISSUER_BASE_URL='https://edgein.us.auth0.com'
 NEXT_PUBLIC_AUTH0_CLIENT_ID='2sc8KbXV1SyNy68PL0RTy3iCWgur8TZS'
-NEXT_PUBLIC_AUTH0_REDIRECT_URL='https://staging.edgein.dev'
+NEXT_PUBLIC_AUTH0_REDIRECT_URL='https://edgein.io'
 
 #key permission with read and write access
 ALGOLIA_WRITE_APPLICATION_ID='B577V9DWXL'
