Email Verification added
change keys for prod and links for redirections.

--- a/.env
+++ b/.env
@@ -86,3 +86,7 @@ NEXT_PUBLIC_AWS_LOCATION_SERVICE_PLACE_INDEX=EsriIndex
 NEXT_PUBLIC_CLOUDSPONGE_API_KEY="localhost-only"
 
 NEXT_PUBLIC_GOOGLE_ADS_CLIENT_ID="ca-pub-6786801511149230"
+
+#EMAIL VERIFICATION
+NEXT_GET_OTP_VERIFICATION_API_KEY = ZIVwDUP4aEdrtcgl15vTmkN3j9BeYHfF
+NEXT_GET_OTP_VERIFICATION_AUTH_TOKEN = aspud2c1856lgoie90xnzvf4rbktwhqy
