--- a/.env
+++ b/.env
@@ -88,5 +88,10 @@ NEXT_PUBLIC_CLOUDSPONGE_API_KEY="localhost-only"
 NEXT_PUBLIC_GOOGLE_ADS_CLIENT_ID="ca-pub-6786801511149230"
 
 #EMAIL VERIFICATION
-NEXT_GET_OTP_VERIFICATION_API_KEY = ZIVwDUP4aEdrtcgl15vTmkN3j9BeYHfF
-NEXT_GET_OTP_VERIFICATION_AUTH_TOKEN = aspud2c1856lgoie90xnzvf4rbktwhqy
+NEXT_GET_OTP_VERIFICATION_API_KEY = RHr0WTVhv4XiwknAfdosqYyzaEZQPSUG
+NEXT_GET_OTP_VERIFICATION_AUTH_TOKEN = vpa0iht6d2fqor7eu3bzyg58w41jlcms
+
+#LINKEDIN VERIFICATION
+NEXT_PUBLIC_LINKEDIN_CLIENT_ID='7819bp8k6na7fo'
+LINKEDIN_CLIENT_SECRET='WPL_AP1.LswHZJR8MZKy1cm1.Y8oa4Q=='
+LINKEDIN_REDIRECT_URI='https://cec1-116-72-249-25.ngrok-free.app/referrals-and-points/'
