--- a/.env
+++ b/.env
@@ -34,13 +34,15 @@ ALGOLIA_WRITE_API_KEY='d6d07145d8fddfc2f1c91fdd8862b647'
 NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='B577V9DWXL'
 NEXT_PUBLIC_ALGOLIA_API_KEY='843c16ff46e6a05408fb3b98344b5ab6'
 
-AWS_BUCKET='edgein-image-upload-rmdev'
-AWS_BUCKET_ACCESS_KEY_ID='AKIA5Z4FFHJ5ERI2ZAY6'
-AWS_BUCKET_SECRET_ACCESS_KEY='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'
+AWS_BUCKET='edgein-image-upload-rmdev-new'
+AWS_BUCKET_ACCESS_KEY_ID='AKIAQSYNMH63UVU3RSJ2'
+AWS_BUCKET_SECRET_ACCESS_KEY='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'
+AWS_BUCKET_REGION='us-west-2'
+
 AWS_SES_ACCESS_KEY_ID='AKIAQSYNMH635TN6TT25'
 AWS_SES_ACCESS_SECRET_KEY='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'
 AWS_SES_REGION='us-east-1'
-AWS_BUCKET_REGION='us-west-2'
+
 
 AWS_DYNAMODB_ACCESS_KEY_ID='AKIAQSYNMH636T7O4JN4'
 AWS_DYNAMODB_SECRET_ACCESS_KEY='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'
