--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:production": "next dev",
-    "build": "NODE_OPTIONS=\"--max_old_space_size=4096\" next build",
+    "build": "set NODE_OPTIONS=--max_old_space_size=4096 && next build",
     "start": "next start",
     "test": "jest --watch",
     "lint": "next lint",
@@ -48,6 +48,7 @@
     "@playwright/test": "^1.35.0",
     "@react-email/components": "^0.0.7",
     "@react-email/render": "^0.0.7",
+    "@supabase/supabase-js": "^2.47.12",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
