--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ NEXT_PUBLIC_AUTH0_CLIENT_ID='2sc8KbXV1SyNy68PL0RTy3iCWgur8TZS'
 NEXT_PUBLIC_AUTH0_REDIRECT_URL='https://edgein.io'
 
 #key permission with read and write access
-ALGOLIA_WRITE_APPLICATION_ID='B577V9DWXL'
-ALGOLIA_WRITE_API_KEY='d6d07145d8fddfc2f1c91fdd8862b647'
+ALGOLIA_WRITE_APPLICATION_ID='CZTE0KVTS6'
+ALGOLIA_WRITE_API_KEY='2f1771fe88194ed871c1ca4f99b7e65d'
 
 #key permission with only read access
 NEXT_PUBLIC_ALGOLIA_APPLICATION_ID='B577V9DWXL'
