--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@formspark/use-formspark": "^0.1.39",
     "@headlessui/react": "^1.7.3",
     "@hypelab/sdk-react": "^1.0.4",
+    "@livechat/widget-react": "^1.3.3",
     "@playwright/test": "^1.35.0",
     "@react-email/components": "^0.0.7",
     "@react-email/render": "^0.0.7",
