CORS opened for xadeai redirection

--- a/.env
+++ b/.env
@@ -99,3 +99,13 @@ NEXT_PUBLIC_SUPABASE_URL = https://dgpqjmpcjyzfaulxbgim.supabase.co
 NEXT_PUBLIC_LINKEDIN_CLIENT_ID='7819bp8k6na7fo'
 LINKEDIN_CLIENT_SECRET='WPL_AP1.LswHZJR8MZKy1cm1.Y8oa4Q=='
 LINKEDIN_REDIRECT_URI='https://cec1-116-72-249-25.ngrok-free.app/referrals-and-points/'
+
+
+#TWITTER
+NEXT_PUBLIC_TWITTER_CLIENT_ID=""
+TWITTER_CLIENT_SECRET=""
+NEXT_PUBLIC_TWITTER_REDIRECT_URI="https://18fa-182-48-225-187.ngrok-free.app/api/auth/callback"
+NEXT_PUBLIC_TWITTER_SCOPES="tweet.read users.read tweet.write"
+NEXT_PUBLIC_TWITTER_AUTH_URL="https://x.com/i/oauth2/authorize"
+TWITTER_TOKEN_URL="https://api.twitter.com/2/oauth2/token"
+NEXT_REDIRECT_SITE = "https://your-react-app.com/dashboard"
