--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "auth0": "^3.5.0",
     "aws-sdk": "^2.1197.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
