--- a/.env
+++ b/.env
@@ -99,3 +99,6 @@ NEXT_PUBLIC_SUPABASE_URL = https://dgpqjmpcjyzfaulxbgim.supabase.co
 NEXT_PUBLIC_LINKEDIN_CLIENT_ID='7819bp8k6na7fo'
 LINKEDIN_CLIENT_SECRET='WPL_AP1.LswHZJR8MZKy1cm1.Y8oa4Q=='
 LINKEDIN_REDIRECT_URI='https://cec1-116-72-249-25.ngrok-free.app/referrals-and-points/'
+
+#LIVE CHAT
+NEXT_PUBLIC_LIVECHAT_LISCENCE = 19031677
