--- a/.env
+++ b/.env
@@ -108,4 +108,4 @@ NEXT_PUBLIC_TWITTER_REDIRECT_URI="https://18fa-182-48-225-187.ngrok-free.app/api
 NEXT_PUBLIC_TWITTER_SCOPES="tweet.read users.read tweet.write"
 NEXT_PUBLIC_TWITTER_AUTH_URL="https://x.com/i/oauth2/authorize"
 TWITTER_TOKEN_URL="https://api.twitter.com/2/oauth2/token"
-NEXT_REDIRECT_SITE = "https://your-react-app.com/dashboard"
+NEXT_REDIRECT_SITE = "https://9bad-182-48-225-63.ngrok-free.app/agent-builder"
