--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://9bad-182-48-225-63.ngrok-free.app"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
