--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "swr": "^1.3.0",
     "textarea-caret": "^3.1.0",
     "validator": "^13.7.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
