--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "iso-3166-1": "^2.1.1",
     "jose": "^4.8.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.483.0",
     "micro": "^10.0.1",
     "moment-timezone": "^0.5.37",
     "morgan": "^1.10.0",
@@ -115,9 +116,9 @@
     "sass": "^1.51.0",
     "stripe": "^10.12.0",
     "swr": "^1.3.0",
+    "tailwind-merge": "^2.5.2",
     "textarea-caret": "^3.1.0",
     "validator": "^13.7.0",
-    "tailwind-merge": "^2.5.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
