--- a/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
+++ b/.github/workflows/apply_hasura_migration_and_update_data_fields.yml
@@ -39,7 +39,7 @@ jobs:
         uses: falti/dotenv-action@v1.0.4
 
       - name: Hasura migrate
-        uses: tibotiber/hasura-action@v3.0
+        uses: hasura/hasura-action@v3.0
         with:
           args: migrate apply --database-name default
         env:
@@ -49,7 +49,7 @@ jobs:
           HASURA_ADMIN_SECRET: ${{ env.HASURA_ADMIN_SECRET }}
 
       - name: Hasura clear
-        uses: tibotiber/hasura-action@v3.0
+        uses: hasura/hasura-action@v3.0
         with:
           args: metadata clear
         env:
@@ -59,7 +59,7 @@ jobs:
           HASURA_ADMIN_SECRET: ${{ env.HASURA_ADMIN_SECRET }}
 
       - name: Hasura apply
-        uses: tibotiber/hasura-action@v3.0
+        uses: hasura/hasura-action@v3.0
         with:
           args: metadata apply
         env:
