--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "dev:production": "next dev",
     "build": "set NODE_OPTIONS=--max_old_space_size=4096 && next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "test": "jest --watch",
     "lint": "next lint",
