--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "express-rate-limit": "^6.7.0",
     "express-slow-down": "^1.5.0",
     "extract-domain": "^2.4.8",
+    "framer-motion": "^12.12.1",
     "graphql": "^16.5.0",
     "graphql-tag": "^2.12.6",
     "hash-sum": "^2.0.0",
